2010-10-07	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/locationlog.pm, pf/sbin/pfsetvlan: Important fixes to the
	changes introduced for #995 and #1002. SQL errors and pfsetvlan thread
	crashes.

	* pf/lib/pf/radius.pm, pf/t/radius.t: Standardized method names to the
	object form. Updated related tests.

	* pf/lib/pf/SNMP/Cisco/Catalyst_2950.pm, 
	pf/lib/pf/SNMP/Cisco/Catalyst_2960.pm, pf/lib/pf/SNMP/MockedSwitch.pm,
	pf/lib/pf/SNMP.pm, pf/lib/pf/radius.pm, pf/t/data/switches.conf, 
	pf/t/radius.t: pf::radius now verifies if switch supports Wired MAB 
	and 802.1X before processing request.
	Change of default behavior: A request from a switch not defined in 
	switches.conf will fail now. Before we were trying to be nice and load 
	the settings of the default switch but we decided that it wasn't nice 
	for users if they don't realize something wrong first.
	Made test pass and added a couple of them.

2010-10-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: Added HP ProCurve Access Point and
	Controller fingerprints and Ricoh MFP.

	* pf/conf/templates/httpd.conf.apache22: Apache debugging
	instructions. Commented by default only there as a reminder.

2010-10-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/node/edit.php: Fixed a regression where node fields 
	coming from locationlog where set to be editable and would cause 
	grammar failure during node editing.

	* pf/addons/proxy-bypass/README, 
	pf/addons/proxy-bypass/squid-redirector.pl, 
	pf/addons/proxy-bypass/squid.conf-sample.patch, pf/cgi-bin/redir.cgi,
	pf/cgi-bin/register.cgi, pf/cgi-bin/release.cgi, 
	pf/html/user/content/index.php, pf/lib/pf/config.pm, pf/lib/pf/web.pm:
	New feature: Client Proxy Interception (proxy-bypass)
	Requires squid and is not useful to everyone so it is in addons but 
	it's easy to install.
	- squid config + redirector script
	- Provided requirements, install instructions and basic troubleshooting.
	- IP lookup code updated in core